JavaScript: 배열고차함수

--- a/1. core-js/11.  ES6/콜백함수.html
+++ b/1. core-js/11.  ES6/콜백함수.html
@@ -27,7 +27,7 @@
         
         console.log('r2: ' + r2);
 
-        const r3 = ((n1, n2) => n1 * n2);
+        const r3 = calculate((n1, n2) => n1 * n2);
         console.log('r3: ' + r3);
 
         console.log('====================================');
