Web-API: 실전예제1 완료

--- a/2.web-api/App/index.html
+++ b/2.web-api/App/index.html
@@ -23,7 +23,7 @@
         <div id="calc-actions">
             <button type="button" id="btn-add">+</button>
             <button type="button" id="btn-subtract">-</button>
-            <button type="button" id="btn-muliply">x</button>
+            <button type="button" id="btn-multiply">x</button>
             <button type="button" id="btn-divide">/</button>
         </div>
     </section>
@@ -34,11 +34,7 @@
     </section>
 
     <section class="card" id="logs">
-        <ul class="log-entries">
-            <li class="log-entries-item">#1. 0 + 15 = 15</li>
-            <li class="log-entries-item">#2. 15 + 15 = 30</li>
-            <li class="log-entries-item">#3. 30 + 15 = 45</li>
-        </ul>
+        <ul class="log-entries"></ul>
     </section>
     
 </body>
